--- a/_posts/2018-06-02-gsoc18-phase-1.md
+++ b/_posts/2018-06-02-gsoc18-phase-1.md
@@ -16,9 +16,8 @@ which is the repository containing the front-end part of the application.
 ### Existing Code
 One of my mentors [Nik Vaessen](https://github.com/nikvaessen) worked on
 Integrating Speech to Text as a GSoC student in 2016 and 2017.
-You can read more about his contributions [here](https://nikvaessen.github.io).
 
-Nik made a pull request during the end of his coding period last summer for rendering
+Nik made a pull request at the end of his coding period last summer for rendering
 subtitles in the form of a React Component. I picked up from where Nik had left
 and continued working on it.
 
@@ -26,15 +25,14 @@ and continued working on it.
 I worked on the `transcription` feature to enable displaying (nearly) real time transcription
 subtitles conference. So, currently the subtitles can be seen as follows :
 
-<!-- Add youtube embed here -->
+![Subtitles](/assets/img/blog/gsoc18-phase-1/subtitles.png)
 
 I made a couple of pull requests to my mentor's fork :
-- [https://github.com/nikvaessen/jitsi-meet/pull/2]()
-- [https://github.com/nikvaessen/jitsi-meet/pull/3]()
+- [https://github.com/nikvaessen/jitsi-meet/pull/2](https://github.com/nikvaessen/jitsi-meet/pull/2)
+- [https://github.com/nikvaessen/jitsi-meet/pull/3](https://github.com/nikvaessen/jitsi-meet/pull/3)
 
-whose changes reflect in the pull request in the main repository :
-
-[https://github.com/jitsi/jitsi-meet/pull/1914]()
+whose changes reflect in the pull request in the main repository :<br>
+[https://github.com/jitsi/jitsi-meet/pull/1914](https://github.com/jitsi/jitsi-meet/pull/1914)
 
 ### Technical aspects - How things work ?
 [Jigasi](https://github.com/jitsi/jigasi) - JItsi GAteway to SIP implements a speech to text
@@ -77,13 +75,13 @@ removes the key,value entry from the map after a defined period.
 Finally `TranscriptionSubtitles.web.js` uses this map as a Prop to re-render the transcription text
 paragraphs every time it gets updated and displays it accordingly :)
 
-### Learning Outcomes
-- Codebase : Became familiar with the large codebase and the different components involved.
-- Basics of XMPP
-- React-Redux
-- Better version control
+### Challenges faced and Learning Outcomes
+- Large Codebase : Became familiar with the codebase and the different components involved.
+- Basics of XMPP : Learnt more about the XMPP standard for presence and messaging.
+- React-Redux : Got familiar with the working of a react-redux applications
+- Better version control : You can say that moved ahead from the *add, commit, push* philosophy ;)
 
-### What am I currently working on ?
+## What am I currently working on ?
 Currently the the transcibed message in JSON format is sent through the XMPP Message stanza 
 encapsulated in its body as follows :
 
@@ -114,3 +112,16 @@ in a `json-message` element, so that the Jigasi sends the following XMPP Stanza 
 </json-message>
 </message>
 ~~~
+
+## Future Work
+Initially we decided on going with the client-side translations but after proper research
+in the available options, we decided to change it to server-side translations as :
+- Lack of free services.
+- Requirement of authentication for the paid ones which may lead to abuse of the service
+and extra costs.
+
+**Server-Side Translations** will be helpful as :
+- It will prevent misuse of paid translation services.
+- The abstract implementation will allow for easily extending it with other external translation
+services as per choice and a locally setup service as well.
+- Ease in preparing the final transcript of the meet in the required translated language.
