Blog minor updates and fixes

--- a/_posts/2018-05-02-gsoc18-phase-0.md
+++ b/_posts/2018-05-02-gsoc18-phase-0.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Phase 0 - Selected for GSoC-2018 with Jitsi
+title: Phase 0 - Selected for GSoC with Jitsi
 description: >
   Selected for Google Summer of Code 2018 with Jitsi and the Community Bonding Period starts.
 tags: [gsoc]
@@ -26,7 +26,7 @@ other features such as audio, dial-in, recording, and simulcasting.*
 You can try out the platform from the browser here : [https://meet.jit.si/](https://meet.jit.si/)
 
 ### My Project Proposal
-My major aim in the project proposal is to work on the transcription service in Jitsi-Meet
+My major aim in the project proposal is to improve the transcription service in Jitsi-Meet and
 integrate a translation module in it for real time transcription with translation.
 
 ![Jitsi-GSoC](/assets/img/blog/gsoc18-phase-0/jitsi-gsoc.png)
