Blog Update : Draft for GSoC Overview

--- a/_posts/2018-07-14-gsoc18-phase-2.md
+++ b/_posts/2018-07-14-gsoc18-phase-2.md
@@ -58,15 +58,15 @@ in Jigasi. An abstract translation service was added to use any required transla
 services and `GoogleCloudTranslate` was implemented.
 
 A `TranslationManager` which implemented a `TranscriptionListener` was used to keep a
-count if the required languages for translation as per the participants in the conference.
-Once the `TranslationManager` is notified of a final `TranslationResult`, it uses the
+count of the required languages for translation as per the participants in the conference.
+Once the `TranslationManager` is notified of a final `TranslationResult`, it uses then
 `TranslationService` to get translations in all the required languages.
 We do not translate the interim messages because the it would lead to higher costs and we
 need the full context of a sentence for translations.
 All the translated results are then notified to the list of `TranslationResultListener`s.
 
 We do not publish the translation results in the Chatroom as it will flood it with translation
-results in different languages. We send th json-messages of the type `translation-result` which
+results in different languages. We send the json-messages of the type `translation-result` which
 can be parsed to show only the required results in the front-end. This json looks
 like this :
 ```xml
@@ -90,10 +90,11 @@ like this :
 </message
 ```
 
-The next task was to send the preference from target language from the front-end.
+The next task was to send the preference of target language from the front-end.
 After discussions, we decided to use the presence stanza to send the language preference
-to Jigasi. This can be updated from the developer console in browser's as of now with :
+to Jigasi. This can be updated from the developer console in the browser as of now with :
 `APP.conference._room.setLocalParticipantProperty('translation_language','hi');`
+
 This triggers `JvbConference#memberPresenceChanged`. We parse the target language using
 a custom presence stanza extension in `Jitsi` and set this language preference for the
 participant with the given id and is added to the map of languages in `TranslationManager`.
