Updates about section and setup github action

--- a/_posts/2018-05-02-gsoc18-phase-0.md
+++ b/_posts/2018-05-02-gsoc18-phase-0.md
@@ -4,6 +4,8 @@ title: Phase 0 - Selected for GSoC with Jitsi
 description: >
   Selected for Google Summer of Code 2018 with Jitsi and the Community Bonding Period starts.
 tags: [gsoc]
+# TODO: Use redirect and use updated urls
+permalink: /:categories/:year/:month/:day/:title/
 ---
 
 *Phase 0* because indexing starts with *ZERO*. Period ;)
