--- a/_posts/2018-06-02-gsoc18-phase-1.md
+++ b/_posts/2018-06-02-gsoc18-phase-1.md
@@ -4,6 +4,7 @@ title: Phase 1 - Displaying Transcription Subtitles
 description: >
   Worked with *jitsi-meet* - the front end component for [https://meet.jit.si](https://meet.jit.si).
 tags: [gsoc]
+permalink: /:categories/:year/:month/:day/:title/
 ---
 
 The first phase of GSoC 2018 is coming to an end.
