--- a/_posts/2018-07-14-gsoc18-phase-2.md
+++ b/_posts/2018-07-14-gsoc18-phase-2.md
@@ -5,6 +5,7 @@ description: >
   Added json-message extensions and translated the transcription messages by working with
   [Jigasi](https://github.com/jitsi/jigasi) - the SIP component of Jitsi
 tags: [gsoc]
+permalink: /:categories/:year/:month/:day/:title/
 ---
 
 Here's a brief summary of my work in the 2nd phase of GSoC 2018:
